enforce coherency between notebooks

--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-3_MegatronFundementals.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-3_MegatronFundementals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "geographic-sweden",
+   "id": "sensitive-workstation",
    "metadata": {},
    "source": [
     "##  Megatron-LM Model Parallel Unit (MPU)\n",
@@ -22,17 +22,17 @@
     "\n",
     "The goal of this lab is to understand how Megatro-LM's Model Parallel Unit (MPU) works, more specifically, we will cover :\n",
     "\n",
-    "    - GPUs grouping affinity per training configuration.\n",
-    "    - Tensor Model Parallism : \n",
+    "    1. GPUs grouping affinity per training configuration.\n",
+    "    2. Tensor Model Parallism : \n",
     "        - Column Parallel\n",
     "        - Row Parallel\n",
     "\n",
-    "Pipeline Model Parallism will be covered in the lecture instead. \n"
+    "Pipeline Model Parallism will be covered in the lecture presentation instead. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "religious-metadata",
+   "id": "ordinary-motel",
    "metadata": {},
    "source": [
     "Before going through GPUs grouping affinity, we need to specify the following parameters :\n",
@@ -57,7 +57,7 @@
     "\n",
     "    world_size = 16  \n",
     "\n",
-    "Accoridng to Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) we should see the following ...\n",
+    "Accoridng to Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) we should see the following GPUs affinity grouping :\n",
     "\n",
     "    8 data_parallel groups:\n",
     "        [g0, g2], [g1, g3], [g4, g6], [g5, g7], [g8, g10], [g9, g11], [g12, g14], [g13, g15]\n",
@@ -67,14 +67,13 @@
     "        [g0, g4, g8, g12], [g1, g5, g9, g13], [g2, g6, g10, g14], [g3, g7, g11, g15]\n",
     "\n",
     "**Note** : for efficiency, the caller should make sure adjacent ranks are on the same DGX box.\n",
-    "For example if we are using 2 DGX-1 boxes\n",
-    "with a total of 16 GPUs, rank 0 to 7 belong to the first box and\n",
+    "For example, if we are using 2 DGX-1 boxes with a total of 16 GPUs, rank 0 to 7 belong to the first box and\n",
     "ranks 8 to 15 belong to the second box."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sonic-processor",
+   "id": "settled-killing",
    "metadata": {},
    "source": [
     "The code block below is modified from Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) in order to avoid the need of having actual 16 physical GPUs to run this notebook, in another word, this notebook can be run without have any physical GPUs present."
@@ -83,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rapid-watch",
+   "id": "italic-bacon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monthly-vacation",
+   "id": "sacred-parts",
    "metadata": {},
    "source": [
     "\n",
@@ -181,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enhanced-latitude",
+   "id": "killing-process",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nasty-zambia",
+   "id": "starting-cache",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weird-knife",
+   "id": "quantitative-restriction",
    "metadata": {},
    "source": [
     "Try a different training configuration, what did you get ? "
@@ -231,13 +230,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "verified-brand",
+   "id": "quarterly-russia",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## assuming the world size is 16, that is, you have 16 GPUs\n",
-    "tensor_model_parallel_size= <FILL_IN>  # try a different tensor_model_parallel_size_\n",
-    "pipeline_model_parallel_size= <FILL_IN>  # try a different pipeline_model_parallel_size_\n",
+    "## Assuming the world size is 16, that is, you have 16 GPUs\n",
+    "tensor_model_parallel_size= <FILL_IN>  # try a different tensor_model_parallel_size\n",
+    "pipeline_model_parallel_size= <FILL_IN>  # try a different pipeline_model_parallel_size\n",
     "world_size=16\n",
     "assert world_size%(tensor_model_parallel_size * pipeline_model_parallel_size)==0,'please make sure world_size is divisible by tensor_model_parallel_size * pipeline_model_parallel_size' \n",
     "initialize_model_parallel(tensor_model_parallel_size_=tensor_model_parallel_size,pipeline_model_parallel_size_= pipeline_model_parallel_size,world_size=world_size)"
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blond-radical",
+   "id": "earlier-verse",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
@@ -257,11 +256,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "developing-installation",
+   "id": "gothic-network",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Below class is modified from the original Megatron repo in order to skip environment variable initialization\n",
+    "## Below class is modified from the original Megatron repo in order to skip environment variables initialization\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"./Megatron-LM\")\n",
@@ -371,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twelve-rebel",
+   "id": "accurate-injury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,16 +436,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extensive-transfer",
+   "id": "limiting-retreat",
    "metadata": {},
    "source": [
-    "Peek inside Column Parallel Class, indeed Column Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, is sliced **column-wised**. Each column-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity."
+    "Peek inside Column Parallel Class, indeed Column Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, is sliced **_column-wised_**. Each column-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity. However, since we do not physically have 16 GPUs and therefore the usage of the modified code block above, will steer clear the need of allocating actual physical GPUs as resources. We will therefore only print out the shape of each colume-wised partitioned matrix Ai, and will **_NOT_** be sending the partition matrix Ai to any GPUs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agreed-spending",
+   "id": "modern-journal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greek-portable",
+   "id": "ranging-tiffany",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -480,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "healthy-loading",
+   "id": "fantastic-heaven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considered-class",
+   "id": "medical-algeria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imported-adoption",
+   "id": "worthy-courtesy",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -511,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intellectual-wright",
+   "id": "stock-christian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pursuant-dinner",
+   "id": "smart-beginning",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -530,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affiliated-aircraft",
+   "id": "ongoing-controversy",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
@@ -542,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medium-balloon",
+   "id": "published-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,16 +650,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "personal-motion",
+   "id": "potential-nowhere",
    "metadata": {},
    "source": [
-    "Peek inside Row Parallel Class, indeed Row Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, Ai was chopped in a **row-wised** manner. Each row-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity."
+    "Peek inside Row Parallel Class, indeed Row Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, Ai was chopped in a **row-wised** manner. Each row-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity. However, since we do not physically have 16 GPUs and therefore the usage of the modified code block above, will steer clear the need of allocating actual physical GPUs as resources. We will therefore only print out the shape of each row-wised partitioned matrix Ai, and will **_NOT_** be sending the partition matrix Ai to any GPUs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intellectual-income",
+   "id": "protective-escape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agreed-eight",
+   "id": "lovely-dover",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -710,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "published-range",
+   "id": "adverse-emperor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "native-thomas",
+   "id": "micro-steal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aerial-three",
+   "id": "simplified-blink",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -740,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tracked-viking",
+   "id": "public-greeting",
    "metadata": {},
    "source": [
     "---\n",
@@ -751,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "needed-scanning",
+   "id": "polished-popularity",
    "metadata": {},
    "source": [
     "-----\n",
@@ -760,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tender-christianity",
+   "id": "dutch-adrian",
    "metadata": {},
    "source": [
     "-----\n",
