--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-4_GPT_vocab_merge_files.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-4_GPT_vocab_merge_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "mysterious-bride",
+   "id": "sustainable-wrong",
    "metadata": {},
    "source": [
     "## GPT Tokenizer files\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thrown-pittsburgh",
+   "id": "fatal-think",
    "metadata": {},
    "source": [
     "Let's review the source code of [gpt2 tokenizer](https://huggingface.co/transformers/_modules/transformers/tokenization_gpt2.html)\n",
@@ -35,12 +35,12 @@
     "         tokenizer(\" Hello world\")['input_ids']\n",
     "        [18435, 995]\n",
     "\n",
-    "We expect our custom tokenizer, which we will train and obtain custom vocab.json and merges.txt files, when applies tokenization, should result in the same outputs above given the exact same input. \n"
+    "We expect our custom tokenizer, which we will later on train in lab 2,  will exhibit the same behavior of [treating spaces like parts of the tokens](https://huggingface.co/transformers/model_doc/gpt2.html#transformers.GPT2Tokenizer).\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "marine-alberta",
+   "id": "missing-congo",
    "metadata": {},
    "source": [
     "Install necessary python libraries."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entitled-brass",
+   "id": "private-aurora",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "generous-blake",
+   "id": "frequent-blues",
    "metadata": {},
    "source": [
     "Next, we proceed to fetch pretrained GPT Tokenizer files, namely the vocab and merge files, will ideally looks like. \n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "different-relief",
+   "id": "conceptual-mason",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latest-thinking",
+   "id": "specific-pharmaceutical",
    "metadata": {},
    "source": [
     "Examine the vocab and merge files, observe the presence of Ġ character.\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continental-keeping",
+   "id": "pursuant-paradise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mathematical-depression",
+   "id": "private-hunter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,22 +116,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deluxe-empire",
+   "id": "cellular-standing",
    "metadata": {},
    "source": [
-    "The following code block will load a default GPT2Tokenizer from HuggingFace transformer library, we verify the following :\n",
+    "The following code block will load a default GPT2Tokenizer from HuggingFace's **_transformer_** library, we verify the following :\n",
     "\n",
     "            from transformers import GPT2Tokenizer\n",
     "            tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
     "        \n",
     "            tokenizer(\" Hello world\")['input_ids']\n",
-    "            expected token ids for \" Hello world\" is [18435, 995]"
+    "            expected token ids for \" Hello world\" is [18435, 995]\n",
+    "\n",
+    "Note: The HuggingFace's **_transformer_** library does not have functions to train GPTBPE tokenizer, it can load a pre-trained tokenizer given valid files. For training GPTBPE Tokenizer, we will need to use another library called **_tokenizers_** also from HuggingFace."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "detailed-thirty",
+   "id": "driving-right",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,35 +153,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-characterization",
+   "id": "collectible-rehabilitation",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
     "    \n",
     "         Hello world\n",
     "        tokens: ['ĠHello', 'Ġworld']\n",
-    "        ids: [18435, 995]"
+    "        ids: [18435, 995]\n",
+    "Observe the presence of the **Ġ** character. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "universal-penalty",
+   "id": "fluid-merit",
    "metadata": {},
    "source": [
-    "Next code block will load tokenizer library from huggingFace, we will observe the difference when setting `use_gpt` to True or False. \n",
+    "In the next code block, we will examine how HuggingFace's **_tokenizers_** library loads a pretrained tokenizer given gpt2-vocab.json and merges.txt files. \n",
+    "We will verify that, the usage of `use_gpt` flag will result in the same tokenization behavior, i.e the presence of the **Ġ** character. We will also double check that the token ids are identical to HuggingFace's **_transformer_** loaded `tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")` when applying tokenization to the exact same text ` Hello world`. \n",
     "\n",
     "Setting `use_gpt` to True will evoke the following : \n",
     "\n",
     "        tokenizer.pre_tokenizer = pre_tokenizers.ByteLevel()\n",
     "        tokenizer.decoder = ByteLevelDecoder()\n",
     "        \n",
-    "This is the expected tokenizer behavior for GPT models, namely GPTBPE Tokenizer, this GPTBPE tokenizer will load the vocab.json and merges.txt files and tokenize as expected. Whereas setting `use_gpt` to False, will result in a normal BPE Tokenizer, the tokenization will behave differently."
+    "This is the expected tokenizer behavior for GPTBPE Tokenizer, this GPTBPE tokenizer will load the vocab.json and merges.txt files and tokenize as expected. Whereas setting `use_gpt` to False, will result in a normal BPE Tokenizer, the tokenization will behave differently."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enhanced-factor",
+   "id": "quarterly-remains",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polar-context",
+   "id": "incident-positive",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -237,30 +241,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-software",
+   "id": "substantial-spank",
    "metadata": {},
    "source": [
     "What did we observed ? \n",
     "\n",
-    "Setting `use_gpt` to True will give us the expected behavor of GPTBPE tokenization. \n",
+    "We observe that by setting `use_gpt` flag to True in HuggingFace's **_tokenizers_** library when loading the same gpt2-vocab.json and merges.txt will give us the expected behavor of GPTBPE tokenization. \n",
     "\n",
-    "It will ensure the presence of Ġ : \n",
+    "We further verify, by applying tokenization to the exact same text ` Hello world`, the result of the tokenizer, with `use_gpt` flag = True, will match the result of the HuggingFace's  **_transformer_** library loaded gpt2 tokenizer.\n",
     "\n",
-    "    tokenizer.pre_tokenizer = pre_tokenizers.ByteLevel()\n",
-    "    tokenizer.decoder = ByteLevelDecoder()\n",
-    "\n",
+    "Whereas setting `use_gpt` flag = False would result in a different behavior. \n",
     "\n",
     "Therefore, we will enforce having :\n",
     "\n",
     "    tokenizer.pre_tokenizer = pre_tokenizers.ByteLevel()\n",
     "    tokenizer.decoder = ByteLevelDecoder()\n",
-    "When training our own GPTBPETokenizer with our own raw text data.\n",
-    "    "
+    "\n",
+    "When training our own GPTBPETokenizer with our own raw text data in Lab 2.    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bigger-miami",
+   "id": "solid-aspect",
    "metadata": {},
    "source": [
     "We will now move the gpt-vocab.json and gpt2-merges.txt to the correct data folder as a preparation for the next step."
@@ -269,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "killing-advance",
+   "id": "electrical-worcester",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-girlfriend",
+   "id": "related-saturn",
    "metadata": {},
    "source": [
     "---\n",
@@ -291,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-taiwan",
+   "id": "surprised-venue",
    "metadata": {},
    "source": [
     "-----\n",
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungry-wilderness",
+   "id": "graduate-windsor",
    "metadata": {},
    "source": [
     "-----\n",
