--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-6_Observe_GPT_runs_vs_performance.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-6_Observe_GPT_runs_vs_performance.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "excessive-marathon",
+   "id": "frozen-circumstances",
    "metadata": {},
    "source": [
-    "# Profiling Megatron_LM GPT\n",
+    "# Profiling Megatron-LM training\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
@@ -13,7 +13,7 @@
     "The goal of this lab is to profile the Megatron-LM's GPT model training runs with varying training configurations in order to ensure the GPUs performance across multi-GPUs or mult-nodes workload.\n",
     "\n",
     "\n",
-    "**Motivation** : why should we care about profiling ?\n",
+    "**Motivation** : Why should we care about profiling ?\n",
     "  \n",
     "The estimated time-to-compute which we went through in `Lab1-2_EstimateComputeDaysNeeded.ipynb` is based on the assumption that the training run will have good GPUs performance across multi-GPUs or multi-nodes jobs. Bad training configurations could result in low or inconsistent GPUs utilization, which in turn, might prolong the training run.\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unlikely-edwards",
+   "id": "fatal-neutral",
    "metadata": {},
    "source": [
     "---\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "million-philip",
+   "id": "dependent-corner",
    "metadata": {},
    "source": [
     "The Profiling Workflow :\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assumed-steps",
+   "id": "coated-manufacturer",
    "metadata": {},
    "source": [
     "In order to properly analyze the profile obtained via real training runs. \n",
@@ -70,13 +70,13 @@
     "\n",
     "To do a live monitoring during profiling run.\n",
     "\n",
-    "Examine the below [profilig video](https://youtu.be/bnN8ZohiZSI), this video will demonstrate how to call out and arrange 2 windows  within jupyter lab, then launch and monitor the 2 profiling training runs with nvidia-smi live monitoring the performance of the GPUs, the saved profile will be visulized using Nsight UI."
+    "Examine the below [profilig video](https://youtu.be/bnN8ZohiZSI), this video will demonstrate how to call out and arrange 2 windows  within jupyter lab, then launch and monitor the profiling training runs with one window ( left ) print out the Megatron-LM training launching procedure, and the other window ( right ), show nvidia-smi live monitoring the performance of the GPUs. The video will also showcase how to call out the saved profile obtained from the training run. and visulize it using Nsight UI."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executive-anxiety",
+   "id": "beautiful-outreach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signed-allah",
+   "id": "continent-cause",
    "metadata": {},
    "source": [
     "Reference documents : \n",
@@ -100,16 +100,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "purple-event",
+   "id": "nonprofit-affairs",
    "metadata": {},
    "source": [
-    "Install nvtx library, the nvtx tags were already implemented in this repo for your convenience."
+    "Install nvtx library, note that the nvtx tags were already implemented in this repo for your convenience."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accessory-gentleman",
+   "id": "difficult-experience",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designed-struggle",
+   "id": "quality-monitor",
    "metadata": {},
    "source": [
-    "For the purpose of profiling, we will clean the follow folders after each profiling run, in order to ensure trainining always start from scratch."
+    "For the purpose of profiling, we will clean the following folders after each profiling run, in order to ensure trainining always start from scratch."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premium-resident",
+   "id": "subjective-cement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "irish-chinese",
+   "id": "hidden-professor",
    "metadata": {},
    "source": [
     "After the lecture with NVIDIA profiling champion, we are now ready to try out our very first profiling Megatron-LM training job.\n",
@@ -158,7 +158,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
     "To evoke profiling session, call nsys decorations followed by the normal Megatron-LM training launch script : \n",
     "\n",
     "<center><img src=\"./Megatron-LM/pics/evoke_nsys_profiling.JPG\" width=\"1000\"/></center>\n"
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virtual-bankruptcy",
+   "id": "prompt-database",
    "metadata": {},
    "source": [
     "To examine the naive profiling run bash script, click on [open profile_naive_run.sh ](./Megatron-LM/profile_naive_run.sh)\n",
@@ -177,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lonely-newport",
+   "id": "individual-dictionary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-pendant",
+   "id": "undefined-bryan",
    "metadata": {},
    "source": [
     "\n",
@@ -215,21 +214,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applied-airfare",
+   "id": "clean-generation",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "Visualizing the profiles via nsight. The naive profiling run output visulized on Nsight UI :\n",
+    "Visualizing the profiles via Nsight UI. Below is an example of the naive run profile visualized with Nsight UI :\n",
     "\n",
     "\n",
-    "Observe during training, the GPUs utilizations are very low ( the light-blue bar ) \n",
+    "Observe during training phrase, the GPUs utilizations are very low ( the light-blue bar ).\n",
     "<center><img src=\"./Megatron-LM/pics/GPUs_naive_run.JPG\" width=\"1000\"/></center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-internet",
+   "id": "excessive-tract",
    "metadata": {},
    "source": [
     "Below is a ReRun cell for experimentation of varying training configurations in order to obtain different training profiles.\n",
@@ -241,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operating-material",
+   "id": "technical-input",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perfect-lease",
+   "id": "dramatic-master",
    "metadata": {},
    "source": [
     "View/Modify the profile_2nd_run.sh, click to [open profile_2nd_run.sh](./Megatron-LM/profile_2nd_run.sh).\n",
@@ -261,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extra-asbestos",
+   "id": "yellow-radical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laughing-blocking",
+   "id": "received-blend",
    "metadata": {},
    "source": [
     "Below is an example of a successful profiling outputs :\n",
@@ -297,19 +296,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "initial-vertical",
+   "id": "conservative-jamaica",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
     "The improved profiling run output file visulized with Nsight UI :\n",
     "\n",
+    "Observe during training phrase, the GPUs utilizations are improved and more consistent( the light-blue bar ).\n",
+    "\n",
     "<center><img src=\"./Megatron-LM/pics/2ndrun.JPG\" width=\"1000\"/></center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "minus-encoding",
+   "id": "moving-medicare",
    "metadata": {},
    "source": [
     "<a id=\"TheChallenge\"></a>"
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exceptional-template",
+   "id": "comprehensive-birmingham",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -327,16 +328,16 @@
     "\n",
     "Constraints : \n",
     "\n",
-    "        - Use the given # of gpus ( 2 x A100 GPUs 40GB) \n",
+    "        - Use the given # of gpus available ( 2 x A100 GPUs 40GB ) \n",
     "        - Only modify the parameters in the **modifiable section**\n",
     "        - Avoid OOM error\n",
     "        - training run must be finished and checkpoint must be saved successfully\n",
     "Task : \n",
     "      Given the above constraints, achieve a good looking profile. \n",
     "      \n",
-    "The winning profile visulized on Nsight UI should look as the following : \n",
+    "The winning profile visulized on Nsight UI should look similar to the following : \n",
     "\n",
-    "Observe the GPUs utilization are above 90% consistently throughout **training** phrase ( the **dark-blue** bar ) \n",
+    "Observe the GPUs utilization are above 90% consistently ( the light-blue bars ) throughout **training** phrase ( the **dark-blue** bar ).\n",
     "      \n",
     "<center><img src=\"./Megatron-LM/pics/GoodLookingProfile.JPG\" width=\"1000\"/></center>\n",
     "\n",
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-discretion",
+   "id": "resistant-hearing",
    "metadata": {},
    "source": [
     "--- \n",
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-bathroom",
+   "id": "british-history",
    "metadata": {},
    "source": [
     "-----\n",
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specialized-ceremony",
+   "id": "maritime-statistics",
    "metadata": {},
    "source": [
     "-----\n",
