--- a/ai/Megatron/English/Python/jupyter_notebook/Lab2-4_customize_process2mmap.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab2-4_customize_process2mmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "otherwise-masters",
+   "id": "crazy-behalf",
    "metadata": {},
    "source": [
     "## Customize preprocess_data.py\n",
@@ -10,16 +10,16 @@
     "\n",
     "## Learning Objectives\n",
     "\n",
-    "We fetched our own Swedish raw text data in `Lab2-1_acquiring_data.ipynb`, we learned how to find sentence boundary with custom functions in `Lab2-2_SentenceBoundary_and_Deduplicate.ipynb` , we also trained a GPTBPETokenizer and fitted it to our raw Swedish text. \n",
+    "We fetched our own Swedish raw text data in `Lab2-1_acquiring_data.ipynb`, we learned how to find sentence boundary with custom functions in `Lab2-2_SentenceBoundary_and_Deduplicate.ipynb` , we also trained a GPTBPETokenizer and fitted it to our raw Swedish text with `Lab2-3_train_own_GPT2BPETokenizer.ipynb`. \n",
     "\n",
-    "We are now ready to incorporate the custom sentence-splitter into preprocess_data.py and covert the raw Swedish text to , first json format, and then mmap format.\n",
+    "We are now ready to incorporate the custom sentence-splitter into preprocess_data.py and covert the raw Swedish text to, first json format, and then mmap format.\n",
     "\n",
-    "Therefore, the goal of this notebook is to integrate all knowledge gained from both Lab 1 as well as the above notebooks, and challenge ourselves to further customize the preprocess_data.py with a <a href=\"./Lab2-4_customize_process2mmap.ipynb#Custom-Sentence-Splitter\">custom sentence-splitter</a>, and in the process, convert the new raw Sweden text to mmap format.\n",
+    "Therefore, the goal of this notebook is to integrate all knowledge gained from both Lab 1 as well as the above notebooks, and challenge ourselves to further customize the preprocess_data.py with a <a href=\"./Lab2-4_customize_process2mmap.ipynb#Custom-Sentence-Splitter\">custom sentence-splitter</a>  function, and in the process, convert the new raw Sweden text to mmap format.\n",
     "\n",
     "More specifically, this notebook will cover the steps to :\n",
     "\n",
-    "1.  Convert the extracted raw Swedish text from webnyheter2013.txt to webnyheter2013.json.\n",
-    "2.  Generate the mmap format files by default preprocess_data.py first to assure the possibility to move on to the next notebook in case time runs out.\n",
+    "1.  Convert the extracted raw Swedish text from `webnyheter2013.txt` to `webnyheter2013.json`.\n",
+    "2.  Generate the mmap format files by default preprocess_data.py as the first step to ensure we have data necessary for the next notebook to run, in case time runs out.\n",
     "\n",
     "\n",
     "Toward the end, there is a Mini-Challenge <a href=\"./Lab2-4_customize_process2mmap.ipynb#Mini-Challenge\">Jump to view Mini-Challenge</a>.\n"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statutory-thesis",
+   "id": "suburban-coast",
    "metadata": {},
    "source": [
     "1. Convert the extracted raw Swedish text from webnyheter2013.txt to webnyheter2013.json."
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-cause",
+   "id": "parliamentary-accountability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reserved-clear",
+   "id": "pursuant-ghost",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -58,16 +58,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fixed-closing",
+   "id": "insured-excitement",
    "metadata": {},
    "source": [
-    "2.  Generate the mmap format files by default preprocess_data.py first to assure the possibility to move on to the next notebook in case time runs out."
+    "2. Generate the mmap format files by default preprocess_data.py as the first step to ensure we have data necessary for the next notebook to run, in case time runs out."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dried-intro",
+   "id": "palestinian-locking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addressed-meeting",
+   "id": "collect-soccer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moderate-future",
+   "id": "italian-mount",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -116,19 +116,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electrical-executive",
+   "id": "surrounded-clothing",
    "metadata": {},
    "source": [
-    "Now we get the default mmap files (xxx.bin and xxx.idx ) and therefore guarantee the data needed for the next notebook to run.\n",
-    "We can now move on. We start by copy the old preprocess_data.py and rename it to `MYpreprocess_data.py`\n",
+    "Now we get the default mmap files (xxx.bin and xxx.idx ) and therefore guarantee we have the data needed for the next notebook to run disregard whether we finish the mini-challenge or not. \n",
     "\n",
-    "cp the preprocess_data.py into a new python script called `MYpreprocess_data.py`"
+    "We can now move on. We start by copy the old preprocess_data.py and rename it to `MYpreprocess_data.py`. \n",
+    "\n",
+    "Note: As best practice, one never overwrites original python script existed in the given repo directly, one copies the original python script and rename it to a new python script, then work on the new python script, in case of irreversible failures, one can always refer to the original python script, and start again.\n",
+    "\n",
+    "The below code block will duplicate the preprocess_data.py script and renamed the copied python script into a new python script called `MYpreprocess_data.py`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "greatest-receptor",
+   "id": "addressed-month",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "south-devil",
+   "id": "growing-restriction",
    "metadata": {},
    "source": [
     "<a id=\"Custom-Sentence-Splitter\"></a>"
@@ -145,16 +148,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rough-pickup",
+   "id": "chemical-selection",
    "metadata": {},
    "source": [
-    "The below code block is our custom sentence-splitter `cut_sentence_with_quotation_marks`, the custom function is provided for your convenience for integarting to  `MYpreprocess_data.py`"
+    "The custom sentence-splitter `cut_sentence_with_quotation_marks` function is provided below for your convenience, please integrate this custom function into `MYpreprocess_data.py`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "prostate-profession",
+   "id": "vital-latino",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "large-birthday",
+   "id": "musical-benjamin",
    "metadata": {},
    "source": [
     "<a id=\"Mini-Challenge\"></a>"
@@ -197,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medical-incident",
+   "id": "robust-apparel",
    "metadata": {},
    "source": [
     "---\n",
@@ -219,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "selected-depth",
+   "id": "decimal-enlargement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raised-victim",
+   "id": "innocent-delight",
    "metadata": {},
    "source": [
     "Below cell block specify all the input parameters in order to run `MYpreprocess_data.py`. \n",
@@ -443,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fluid-dayton",
+   "id": "geographic-convention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,10 +459,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concerned-protest",
+   "id": "unavailable-steps",
    "metadata": {},
    "source": [
-    "Below is a ReRun cell block to run `MYpreprocess_data.py` and produce the customSentenceSplit_text_document.bin and customSentenceSplit_text_document.idx files.\n",
+    "Below code block is a ReRun cell to launch `MYpreprocess_data.py` and produce the customSentenceSplit_text_document.bin and customSentenceSplit_text_document.idx files, if the script runs successfully.\n",
     "\n",
     "<a id=\"Rerun_Cell\"></a>\n",
     "\n",
@@ -469,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rolled-welcome",
+   "id": "smoking-memory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,16 +490,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-court",
+   "id": "strange-maldives",
    "metadata": {},
    "source": [
-    "Check whether these two files : customSentenceSplit_text_document.bin and customSentenceSplit_text_document.idx files are successfully generated."
+    "Check whether these two files : `customSentenceSplit_text_document.bin` and `customSentenceSplit_text_document.idx` files were successfully generated and is in the correct folder under dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secondary-stereo",
+   "id": "difficult-library",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premier-birth",
+   "id": "strategic-confusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eastern-ministry",
+   "id": "temporal-spring",
    "metadata": {},
    "source": [
     "-----\n",
@@ -525,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "qualified-admission",
+   "id": "parental-tourism",
    "metadata": {},
    "source": [
     "-----\n",
