--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab1-1_Website_scrapping.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab1-1_Website_scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "quality-channel",
+   "id": "micro-village",
    "metadata": {},
    "source": [
     "## Website scrapping\n",
@@ -27,12 +27,12 @@
     "    5. Parse the html file and extract raw text and write to disk.\n",
     "    6. Move the `extractedNVblogs.txt` to the correct folder under **dataset**.\n",
     "\n",
-    "This notebook did not intend to cover crawling webpages for other website/webpages.\n"
+    "This notebook did not intend to cover crawling webpages for other websites/webpages.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "everyday-leonard",
+   "id": "listed-stopping",
    "metadata": {},
    "source": [
     "1. install python libraries and download 2 python scripts which will be used for website crawling."
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exotic-grave",
+   "id": "endangered-vessel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tamil-electric",
+   "id": "designed-insight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precious-birth",
+   "id": "knowing-andorra",
    "metadata": {},
    "source": [
     "2. Crawl links from a seeded url and write to a text file named `NVdevblog_urls.txt`"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dietary-beads",
+   "id": "natural-commander",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "potential-regard",
+   "id": "incredible-lunch",
    "metadata": {},
    "source": [
     "3. Remove incompliant links from the text file in order to ensure legal compliancy.\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amazing-nickname",
+   "id": "angry-cattle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "military-electronics",
+   "id": "defined-interim",
    "metadata": {},
    "source": [
     "4. Fetch the corresponding webpage from each approved url and write it to `XXX.html` format."
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worth-album",
+   "id": "competitive-tower",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collective-dimension",
+   "id": "guided-certification",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs :\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heard-recovery",
+   "id": "neural-method",
    "metadata": {},
    "source": [
     "5. Parse the html file and extract the raw text data, which will be written to `extractedNVblogs.txt`."
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspended-degree",
+   "id": "affected-albania",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continued-voice",
+   "id": "first-research",
    "metadata": {},
    "source": [
     "6. Move the `extractedNVblogs.txt` to the correct folder under **dataset**. This file `extractedNVblogs.txt` will be used in subsequent notebooks in lab1."
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "german-shareware",
+   "id": "fourth-certificate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "willing-charleston",
+   "id": "cultural-retro",
    "metadata": {},
    "source": [
     "**Note:** Please run below cell to free up space."
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "square-montana",
+   "id": "stretch-pattern",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brave-ranking",
+   "id": "black-courage",
    "metadata": {},
    "source": [
     "Verify `extractedNVblogs.txt` is successfully moved to the correct folder."
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pressed-model",
+   "id": "standing-bridges",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worse-affairs",
+   "id": "prepared-ballot",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs :\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-treatment",
+   "id": "cellular-termination",
    "metadata": {},
    "source": [
     "--- \n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sorted-federation",
+   "id": "complex-valentine",
    "metadata": {},
    "source": [
     "-----\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exclusive-qualification",
+   "id": "flush-bruce",
    "metadata": {},
    "source": [
     "--- \n",
