--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab2-1_acquiring_data.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab2-1_acquiring_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "stopped-graph",
+   "id": "fabulous-yield",
    "metadata": {},
    "source": [
     "## Acquire Swedish data \n",
@@ -10,7 +10,7 @@
     "\n",
     "For data licensing and privacy concerns, we will not providing training data in this bootcamp.\n",
     "\n",
-    "However, we do need data in order to proceed the customization of Megatron-LM's workflow for Swedish, hence, the first thing we need to do, is to acquire Swedish raw text data.\n",
+    "However, we do need data in order to proceed the customization of Megatron-LM's workflow for local language needs ( in this case, it is Swedish ), hence, the first thing we need to do, is to acquire Swedish raw text data.\n",
     "\n",
     "This notebook is therefore provided to assist acquisition of Swedish raw text data from språkbanken.\n",
     "\n",
@@ -18,7 +18,7 @@
     "\n",
     "    1. Download data via wget and download the python script which will be used to extract the Swedish text.\n",
     "    \n",
-    "    2. unzip the data using bunzip and move the data to the correct folder under dataset.\n",
+    "    2. Unzip the data using bunzip and move the data to the correct folder under dataset.\n",
     "    \n",
     "    3. A custom function is provided in order to extract raw txt file from xml file and move the text file to the correct folder under dataset.\n",
     "\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "realistic-boating",
+   "id": "wrapped-fields",
    "metadata": {},
    "source": [
     "1. Download data via wget and download the python script which will be used to extract the Swedish text."
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electric-motel",
+   "id": "silent-writer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "activated-sigma",
+   "id": "sunset-moisture",
    "metadata": {},
    "source": [
     "2. unzip the data using bunzip and move the data to the correct folder under dataset."
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blond-begin",
+   "id": "satisfied-absolute",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interior-disease",
+   "id": "detected-volleyball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "severe-table",
+   "id": "expired-compact",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worse-ceiling",
+   "id": "minimal-charm",
    "metadata": {},
    "source": [
     "3. A custom function is provided in order to extract raw txt file from xml file and move the text file to the correct folder under dataset."
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afraid-eleven",
+   "id": "hungry-fundamental",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +134,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "thick-consortium",
+   "metadata": {},
+   "source": [
+    "Verify the output `webnyheter2013.txt` exist under `../../../../dataset/SV/`, we need this raw text file to proceed the subsequent notebooks for Lab2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dietary-thinking",
+   "id": "bronze-interpretation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "false-calgary",
+   "id": "pleased-saskatchewan",
    "metadata": {},
    "source": [
     "-----\n",
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elegant-bandwidth",
+   "id": "local-limit",
    "metadata": {},
    "source": [
     "-----\n",
