--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-2_EstimateComputeDaysNeeded.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-2_EstimateComputeDaysNeeded.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "anticipated-allocation",
+   "id": "emerging-victoria",
    "metadata": {},
    "source": [
     "# Estimate Time\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-cover",
+   "id": "convinced-wales",
    "metadata": {},
    "source": [
     "---\n",
@@ -46,13 +46,13 @@
     "\n",
     "<left><img src=\"./Megatron-LM/pics/TrainingTimeEstimate.JPG\" width=\"500\"/></left>\n",
     "\n",
-    "Two scenarios were extracted from the above paper (screenshot above) : [Efficient Large-Scale Language Model Training on GPU Clusters](https://arxiv.org/pdf/2104.04473.pdf) \n",
+    "Two scenarios were extracted from the screenshot of the paper : [Efficient Large-Scale Language Model Training on GPU Clusters](https://arxiv.org/pdf/2104.04473.pdf) \n",
     "\n",
     "**Scenario 1** -\n",
     "\n",
-    "T = 300Billion tokens # assumed data size measured in tokens\n",
+    "T = 300 billion tokens # assumed data size measured in tokens\n",
     "\n",
-    "P = 175 Billion GPT3 model\n",
+    "P = 175 billion GPT3 model\n",
     "\n",
     "n = 1024 GPUs\n",
     "\n",
@@ -65,11 +65,11 @@
     "\n",
     "**Scenario 2** - \n",
     "\n",
-    "T =  450 Billion tokens  \n",
+    "T =  450 billion tokens  \n",
     "\n",
-    "P = 1 Trillion parameters GPT 3 model\n",
+    "P = 1 trillion parameters GPT 3 model\n",
     "\n",
-    "n = 3072 \n",
+    "n = 3072 GPUs\n",
     "\n",
     "x = 163 teraFLOP/s per GPU \n",
     "\n",
@@ -79,9 +79,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "endangered-colleague",
+   "metadata": {},
+   "source": [
+    "The below code block wrap the two scenarios within a function for automation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attractive-medium",
+   "id": "blocked-turning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indirect-insulin",
+   "id": "posted-stanford",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs :\n",
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "little-answer",
+   "id": "dedicated-convergence",
    "metadata": {},
    "source": [
     "---\n",
@@ -153,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "manufactured-shape",
+   "id": "eight-family",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cubic-water",
+   "id": "animated-prevention",
    "metadata": {},
    "source": [
     "--- \n",
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beneficial-designer",
+   "id": "rolled-navigation",
    "metadata": {},
    "source": [
     "-----\n",
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raising-temperature",
+   "id": "civic-water",
    "metadata": {},
    "source": [
     "-----\n",
