--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-5_jsonfy_and_process2mmap.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-5_jsonfy_and_process2mmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "acting-adelaide",
+   "id": "structural-documentation",
    "metadata": {},
    "source": [
     "## Jsonfy + convert to mmap\n",
@@ -23,16 +23,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aquatic-parcel",
+   "id": "alpha-yahoo",
    "metadata": {},
    "source": [
-    "1. Understand the need of preprocessing data to mmap format."
+    "1. Understand the need of preprocessing data to mmap format.\n",
+    "\n",
+    "The below cell blocks will demonstrate the speed up by using `np.memmap` than `np.load` to load an arbitrary data.\n",
+    "The `np.memmap` is integrated into preprocess_data.py. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "according-boston",
+   "id": "useful-fancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "armed-smell",
+   "id": "eligible-allen",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dedicated-thirty",
+   "id": "grave-violence",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "pressing-boost",
+   "id": "living-cricket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-university",
+   "id": "professional-circuit",
    "metadata": {},
    "source": [
     "2. jsonfy the raw text data into loose json format.\n",
@@ -107,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legislative-provision",
+   "id": "thirty-specialist",
    "metadata": {},
    "source": [
     "We will now use the following python script to converting the raw text data into `extractedNVblogs.json` format as a preparation for the next step. \n",
@@ -125,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "supported-budget",
+   "id": "postal-conjunction",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "split-samuel",
+   "id": "iraqi-scoop",
    "metadata": {},
    "source": [
     "3. Use preprocess_data.py to convert the cleaned data into mmap format as a preparation for training.\n",
@@ -155,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "traditional-income",
+   "id": "promotional-pillow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "residential-honor",
+   "id": "acting-patrick",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "viral-shopping",
+   "id": "short-siemens",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -265,18 +268,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virgin-hearts",
+   "id": "informational-willow",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
     "## Links and Resources\n",
-    "Don't forget to [Read More on MMAP](https://docs.python.org/3/library/mmap.html).\n"
+    "Don't forget to [Read More on MMAP](https://docs.python.org/3/library/mmap.html) and examine the [indexed_dataset builder](https://github.com/NVIDIA/Megatron-LM/blob/main/megatron/data/indexed_dataset.py#L407).\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "packed-panama",
+   "id": "forbidden-emerald",
    "metadata": {},
    "source": [
     "-----\n",
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lovely-tackle",
+   "id": "dedicated-russell",
    "metadata": {},
    "source": [
     "-----\n",
