--- a/ai/Megatron/English/Python/jupyter_notebook/Lab2-3_train_own_GPT2BPETokenizer.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab2-3_train_own_GPT2BPETokenizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "naval-commodity",
+   "id": "rapid-arctic",
    "metadata": {},
    "source": [
     "# Train custom GPTBPE  Tokenzer \n",
@@ -10,12 +10,12 @@
     "\n",
     "## Learning Objectives\n",
     "\n",
-    "In order to include the vocabulary of the local language into GPTBPE tokenizer, we need to be able to train GPTBPE Tokenizer on local language raw text data. The trained GPTBPE Tokenizer will produce it's own vocab.json and merges.txt files which is compatible with Megatron-LM's GPTBPE Tokenizer. \n",
+    "In order to include the vocabulary of the local language, in this case it is Swedish, into GPTBPE tokenizer, we need to be able to train GPTBPE Tokenizer on local language raw text data. The trained GPTBPE Tokenizer will produce it's own vocab.json and merges.txt files which will be compatible with Megatron-LM's GPTBPE Tokenizer. \n",
     "\n",
     "Previously in `Lab2-1_acquiring_data.ipynb`, we have acquired our own Swedish raw text data extracted from data source språkbank.\n",
     "Therefore, the goal of this notebook, is to train our own GPTBPE Tokenizer on the Swedish raw text data obtained from `Lab2-1_acquiring_data.ipynb`.\n",
     "\n",
-    "We can either choose to load a previously trained GPTBPE Tokenizer by providing the vocab.json and merges.txt files to the GPTBPE Tokenizer before training further with the raw text data, or we can choose to train a completely new GPTBPE Tokenizer.\n",
+    "We can either choose to load a previously trained GPTBPE Tokenizer by providing the vocab.json and merges.txt files to the GPTBPE Tokenizer before training further with the raw text data, or we can choose to train a completely new GPTBPE Tokenizer from scratch.\n",
     "\n",
     "The two options are covered in this notebook :\n",
     "\n",
@@ -23,7 +23,7 @@
     "    2. option 2 - train a GPT compatible tokenizer from scratch.\n",
     "\n",
     "\n",
-    "We will use HuggingFace's Tokenizer library and the trainer function in order train our own GPTBPE Tokenizer with our own raw text data.\n",
+    "We will use HuggingFace's Tokenizer library and the trainer function in order to train our own GPTBPE Tokenizer with our own raw text data.\n",
     "\n",
     "\n",
     "First, we will install the [HuggingFace Tokenizer library](https://huggingface.co/transformers/installation.html)"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cathedral-jumping",
+   "id": "suspended-peace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "designing-occasion",
+   "id": "active-artwork",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separated-article",
+   "id": "average-boundary",
    "metadata": {},
    "source": [
     "A python script for training custom GPTBPE Tokenizer is provided for your convenience : \n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "therapeutic-kentucky",
+   "id": "harmful-grounds",
    "metadata": {},
    "source": [
     "1. option 1 - load from pretrained vocab and merge files, then continue training with the new raw text."
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modular-result",
+   "id": "perceived-jerusalem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "roman-advocate",
+   "id": "weird-index",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "better-consideration",
+   "id": "emerging-music",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-gossip",
+   "id": "filled-blast",
    "metadata": {},
    "source": [
     "2. option 2 - train a GPT compatible tokenizer from scratch."
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unexpected-cowboy",
+   "id": "uniform-complaint",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atlantic-serbia",
+   "id": "disabled-pencil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heated-ranch",
+   "id": "tender-magic",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "olive-japanese",
+   "id": "criminal-leadership",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mineral-middle",
+   "id": "orange-alignment",
    "metadata": {},
    "source": [
     "--- \n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pregnant-template",
+   "id": "offshore-truck",
    "metadata": {},
    "source": [
     "-----\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-visiting",
+   "id": "clinical-tuition",
    "metadata": {},
    "source": [
     "-----\n",
